ft(Highlight): Add comment on highlighted text  - Create a Highlights table  - Create a route for highlighting text and commenting on it.  - Create a controller for highlighting text and commenting on it.  - Write tests  - Document API [(Finishes #166790112)]
